# avito_tech_internship_assignment

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 50e7912b4b9d_users_model.py  adf11f10cbdb_initial_migration.py
api/: auth.py  auth_utils.py  base_responses.py  deal.py  info.py  transaction.py
data/adapters/: deal_repo.py  item_repo.py  transaction_repo.py  user_repo.py
data/db/connection/: session.py
data/db/models/: deal.py  item.py  transaction.py  user.py
di/: container.py
domain/: exceptions.py
domain/entities/: models.py
domain/services/: auth_service.py  balance_service.py  deal_service.py  info_service.py  transaction_service.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_deal.py  test_info.py  test_transaction.py
tests/test_domain/: test_auth_service.py  test_balance_service.py  test_deal_service.py  test_info_service.py  test_transaction_service.py
