[project]
name = "av"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioinject>=0.37.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "passlib>=1.7.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
]
